syntax = "proto3";
package neutron.contractmanager;

import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "neutron/contractmanager/failure.proto";
import "neutron/contractmanager/params.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/neutron-org/neutron/v5/x/contractmanager/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/neutron/contractmanager/params";
  }

  // Queries a Failure by contract address and failure ID.
  rpc AddressFailure(QueryFailureRequest) returns (QueryFailureResponse) {
    option (google.api.http).get = "/neutron/contractmanager/failures/{address}/{failure_id}";
  }

  // Queries Failures by contract address.
  rpc AddressFailures(QueryFailuresRequest) returns (QueryFailuresResponse) {
    option (google.api.http).get = "/neutron/contractmanager/failures/{address}";
  }

  // Queries a list of Failures occurred on the network.
  rpc Failures(QueryFailuresRequest) returns (QueryFailuresResponse) {
    option (google.api.http).get = "/neutron/contractmanager/failures";
  }

  // this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

// QueryFailuresRequest is request type for the Query/Failures RPC method.
message QueryFailuresRequest {
  // address of the contract which Sudo call failed.
  string address = 1;
  cosmos.base.query.v1beta1.PageRequest pagination = 3;
}

// QueryFailureRequest is request type for the Query/Failures RPC method.
message QueryFailureRequest {
  // address of the contract which Sudo call failed.
  string address = 1;
  // ID of the failure for the given contract.
  uint64 failure_id = 2;
}

// QueryFailureResponse is response type for the Query/Failure RPC method.
message QueryFailureResponse {
  Failure failure = 1 [(gogoproto.nullable) = false];
}

// QueryFailuresResponse is response type for the Query/Failures RPC method.
message QueryFailuresResponse {
  repeated Failure failures = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
