syntax = "proto3";
package neutron.cron;

import "gogoproto/gogo.proto";

option go_package = "github.com/neutron-org/neutron/v3/x/cron/types";

message Schedule {
  // Name of schedule
  string name = 1;
  // Period in blocks
  uint64 period = 2;
  // Msgs that will be executed every period amount of time
  repeated MsgExecuteContract msgs = 3 [(gogoproto.nullable) = false];
  // Last execution's block height
  uint64 last_execute_height = 4;
}

message MsgExecuteContract {
  // Contract is the address of the smart contract
  string contract = 1;
  // Msg is json encoded message to be passed to the contract
  string msg = 2;
}

message ScheduleCount {
  // Count is the number of current schedules
  int32 count = 1;
}
